@@ -47,6 +47,8 @@ static QRencodeMode hint = QR_MODE_8;
 static unsigned char fg_color[4] = {0, 0, 0, 255};
 static unsigned char bg_color[4] = {255, 255, 255, 255};
 
+static int verbose = 0;
+
 enum imageType {
 	PNG_TYPE,
 	PNG32_TYPE,
@@ -78,9 +80,10 @@ static const struct option options[] = {
 	{"8bit"         , no_argument      , NULL, '8'},
 	{"rle"          , no_argument      , &rle,   1},
 	{"micro"        , no_argument      , NULL, 'M'},
-	{"foreground"	, required_argument, NULL, 'f'},
-	{"background"	, required_argument, NULL, 'b'},
+	{"foreground"   , required_argument, NULL, 'f'},
+	{"background"   , required_argument, NULL, 'b'},
 	{"version"      , no_argument      , NULL, 'V'},
+	{"verbose"      , no_argument      , &verbose, 1},
 	{NULL, 0, NULL, 0}
 };
 
@@ -135,6 +138,8 @@ static void usage(int help, int longopt, int status)
 "               Color output support available only in PNG and SVG.\n\n"
 "  -V, --version\n"
 "               display the version number and copyrights of the qrencode.\n\n"
+"      --verbose\n"
+"               display verbose information to stderr.\n\n"
 "  [STRING]     input data. If it is not specified, data will be taken from\n"
 "               standard input.\n\n"
 "*SYMBOL VERSIONS\n"
@@ -886,6 +891,11 @@ static void qrencode(const unsigned char *intext, int length, const char *outfil
 		}
 		exit(EXIT_FAILURE);
 	}
+
+	if(verbose) {
+		fprintf(stderr, "File: %s, Version: %d\n", (outfile!=NULL)?outfile:"(stdout)", qrcode->version);
+	}
+
 	switch(image_type) {
 		case PNG_TYPE:
 		case PNG32_TYPE:
@@ -917,6 +927,7 @@ static void qrencode(const unsigned char *intext, int length, const char *outfil
 			fprintf(stderr, "Unknown image type.\n");
 			exit(EXIT_FAILURE);
 	}
+
 	QRcode_free(qrcode);
 }
 
@@ -1002,6 +1013,11 @@ static void qrencodeStructured(const unsigned char *intext, int length, const ch
 		} else {
 			snprintf(filename, FILENAME_MAX, "%s-%02d", base, i);
 		}
+
+		if(verbose) {
+			fprintf(stderr, "File: %s, Version: %d\n", filename, p->code->version);
+		}
+
 		switch(image_type) {
 			case PNG_TYPE: 
 			case PNG32_TYPE: 
@@ -1157,9 +1173,6 @@ int main(int argc, char **argv)
 				break;
 			case '8':
 				eightbit = 1;
-				break;
-			case 'r':
-				rle = 1;
 				break;
 			case 'M':
 				micro = 1;
